Run tests on different JDKs via different suites and custom test runner